--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,9 +14,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Use Node.js
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: '12.x'
+        node-version: 14
+        cache: 'npm'
     - run: npm install
     - run: npm run build
 
